RESOLVED FIXED128808
[GTK] Fix marshaller used in WebKitWebPage::document-loaded signal
https://bugs.webkit.org/show_bug.cgi?id=128808
Summary [GTK] Fix marshaller used in WebKitWebPage::document-loaded signal
Carlos Garcia Campos
Reported 2014-02-14 04:55:31 PST
We are using g_cclosure_marshal_VOID__OBJECT probably due to a copy paste error. (WebKitWebProcess:22013): GLib-GObject-CRITICAL **: g_cclosure_marshal_VOID__OBJECT: assertion 'n_param_values == 2' failed
Attachments
Patch (1.33 KB, patch)
2014-02-14 04:57 PST, Carlos Garcia Campos
svillar: review+
Carlos Garcia Campos
Comment 1 2014-02-14 04:57:04 PST
Sergio Villar Senin
Comment 2 2014-02-14 05:03:06 PST
Comment on attachment 224201 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=224201&action=review r=me, good catch! > Source/WebKit2/ChangeLog:3 > + [GTK] Fix marshaller used in WebKitWebPage::document-created signal is document-loaded right?
Carlos Garcia Campos
Comment 3 2014-02-15 00:32:14 PST
Note You need to log in before you can comment on or make changes to this bug.