[GTK] Fix marshaller used in WebKitWebPage::document-loaded signal https://bugs.webkit.org/show_bug.cgi?id=128808

Reviewed by Sergio Villar Senin.

* WebProcess/InjectedBundle/API/gtk/WebKitWebPage.cpp:
(webkit_web_page_class_init): Use g_cclosure_marshal_VOID__VOID
instead of g_cclosure_marshal_VOID__OBJECT.

Canonical link: https://commits.webkit.org/146899@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164167 268f45cc-cd09-0410-ab3c-d52691b4dbfc